# trading_results_api

./: .gitignore  DockerFile  README.md  docker-compose.yml  pyproject.toml
app/: cache.py  config.py  database.py  dependencies.py  models.py  schemas.py  server.py
app/api/v1/: trading.py
app/repository/: trading.py
