[project]
name = "spimex-api"
version = "0.1.0"
description = "Микросервис для выдачи данных о торгах SPIMEX"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.0",
    "redis[hiredis]>=5.1.0",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.isort]
known-first-party = ["app"]