[project]
name = "spimex-api"
version = "0.1.0"
description = "Микросервис для выдачи данных о торгах SPIMEX"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.0",
    "redis[hiredis]>=5.1.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-dotenv>=0.5.0",
    "httpx>=0.27.0",
    "fakeredis[lua]>=2.24",
    "aiosqlite>=0.19",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.isort]
known-first-party = ["app"]